--- a/prayerbook/en.lproj/InfoPlist.strings
+++ b/prayerbook/en.lproj/InfoPlist.strings
@@ -1,3 +1,3 @@
 /* Localized versions of Info.plist keys */
 
-"CFBundleDisplayName" = "Orthodox Calendar";
+"CFBundleDisplayName" = "Православный календарь";
